--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,17 @@ buildscript {
     }
 }
 
+def getDate() {
+    def date = new Date()
+    def formattedDate = date.format('yyyyMMddHHmmss')
+    return formattedDate
+}
+
 allprojects {
     apply plugin: "eclipse"
     apply plugin: "idea"
 
-    version = '1.0'
+    version = '1.0-' + getDate()
     ext {
         appName = "MightyLD36"
         gdxVersion = '1.9.4'
